@@ -1,3 +1,8 @@
+2004-11-19  Ron Steinke <rsteinke@w-link.net>
+
+	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h: Made
+	  comment parsing properly part of the codec state.
+
 2004-11-04  Al Riddoch  <alriddoch@zepler.org>
 
 	* tests/Objects/custom_ops.cpp: Correctly set parents of custom
